Update api methods
