# src/routes/listing-types.js
@@ -1,6 +1,6 @@
 const Router = require('express-promise-router');
 
-const { apiGetAll } = require('middleware/api-methods');
+const { apiGetPage } = require('middleware/api-methods');
 const { ListingType } = require('models');
 
 const router = Router({ mergeParams: true });
@@ -8,6 +8,6 @@ const router = Router({ mergeParams: true });
 /**
  * Handle GET to /api/listing-types route.
  */
-router.get('/', apiGetAll(ListingType));
+router.get('/', apiGetPage(ListingType));
 
 module.exports = router;
