# src/routes/property-types.js
@@ -1,6 +1,6 @@
 const Router = require('express-promise-router');
 
-const { apiGetAll } = require('middleware/api-methods');
+const { apiGetPage } = require('middleware/api-methods');
 const { PropertyType } = require('models');
 
 const router = Router({ mergeParams: true });
@@ -8,6 +8,6 @@ const router = Router({ mergeParams: true });
 /**
  * Handle GET to /api/property-types route.
  */
-router.get('/', apiGetAll(PropertyType));
+router.get('/', apiGetPage(PropertyType));
 
 module.exports = router;
